# recipe-assistant

./: .gitignore  README.md  api_sample_calls.http  pyproject.toml  server.py
app/: chatbot.py  recipechatbot.py
frontend/: .env.production  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ChatPanel.js  Navbar.js  RecipeDisplay.js  RecipeInput.js  SettingsModal.js
frontend/src/styles/: globals.css
frontend/src/utils/: messageFormatting.js
